se sube archivo index.html que faltaba

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	</ul>
 	<ul type="none">
         	<h2>FORMACIÓN ACADÉMICA</h2>
-        	<li> <span class="Negrilla">1956-1961:</span> Universidad del espantapájaros <br><span class="Corrido"> Licenciatura en aeronaútica</span> </li>
-        	<li> <span class="Negrilla">1952-1956:</span> Secundario Gotham  <br><span class="Corrido">Bachiller con especialización en trucos</span> </li>
+        	<li> <span class="Negrilla">1956-1961:</span> Universidad del espantapájaros <br><span class="alineacionCorrido"> Licenciatura en aeronaútica</span> </li>
+        	<li> <span class="Negrilla">1952-1956:</span> Secundario Gotham  <br><span class="alineacionCorrido">Bachiller con especialización en trucos</span> </li>
     	</ul>
     	<ul type="none">
         	<h2>EXPERIENCIA LABORAL</h2>
